# claude-menubar

./: .gitignore  README.md  install.sh  pyproject.toml
claude_menubar/: app.py  html_template.py  icons.py  inbox.py  terminal.py
hooks/: clear_hook.py  notify_hook.py  stop_hook.py
